<resources>
    <string name="app_name">Reddit Clone</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="not_implemented">Not Implemented!</string>
    <string name="explore">Explore</string>
    <string name="chats">Chats</string>
    <string name="notifications">Notifications</string>
    <string name="username">Username</string>
    <string name="posted_by_u_reddit">Posted by u/Reddit</string>
    <string name="main_content">Main content</string>
    <string name="_0">0</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="report">Report</string>
    <string name="hot_posts">HOT POSTS</string>
    <string name="sort_post_by_type">SORT POST BY TYPE</string>
    <string name="hot">Hot</string>
    <string name="_new">New</string>
    <string name="top">Top</string>
</resources>