<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <TextView
        android:layout_margin="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eee"/>

    <ImageView
        android:layout_marginTop="100sp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/sad" />

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_implemented"
        android:textColor="@color/black"
        android:textSize="18sp" />
</LinearLayout>