<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/imgMore"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?actionBarItemBackground"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posted_by_u_reddit"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtName" />

        <ImageView
            android:id="@+id/imgPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/self_text" />

        <TextView
            android:id="@+id/self_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:padding="3dp"
            android:text="@string/main_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtDetails" />

        <TextView
            android:id="@+id/txtThumbUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/_0"
            app:drawableStartCompat="@drawable/ic_baseline_thumb_up_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgPost" />

        <TextView
            android:id="@+id/txtThumbDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawablePadding="5dp"
            android:gravity="center"
            app:drawableStartCompat="@drawable/ic_baseline_thumb_down_24"
            app:layout_constraintEnd_toStartOf="@id/txtComment"
            app:layout_constraintStart_toEndOf="@+id/txtThumbUp"
            app:layout_constraintTop_toBottomOf="@id/imgPost" />

        <TextView
            android:id="@+id/txtComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/_0"
            app:drawableStartCompat="@drawable/ic_baseline_comment_24"
            app:layout_constraintEnd_toStartOf="@id/txtShare"
            app:layout_constraintStart_toEndOf="@+id/txtThumbDown"
            app:layout_constraintTop_toBottomOf="@id/imgPost" />

        <TextView
            android:id="@+id/txtShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/share"
            app:drawableStartCompat="@drawable/ic_baseline_share_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtComment"
            app:layout_constraintTop_toBottomOf="@id/imgPost" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>